@@ -22,6 +22,11 @@ import requests
 import re
 import argparse
 
+try:
+    from semver.version import Version as VersionInfo
+except ImportError:
+    from semver import VersionInfo
+
 
 def get_file_idx(release, pattern=".whl"):
     return next(file_a for file_a in release if re.search(pattern, file_a["filename"]))
@@ -38,8 +43,52 @@ def get_pypi_url(package="DMT-core", version=None, pattern=".whl"):
     return file_to_get["url"]
 
 
+def check_version(to_check, package="DMT-core"):
+    if to_check.startswith("Version_"):
+        to_check = to_check[8:]
+
+    to_check = VersionInfo.parse(to_check)
+    if to_check.prerelease is not None and not to_check.prerelease.startswith("rc."):
+        raise IOError("The DMT naming schneme is: X.Y.Z-rc.A")
+    package = requests.get(f"https://pypi.python.org/pypi/{package:s}/json").json()
+    latest_version = max(package["releases"].keys())
+
+    version_pkg = latest_version.split(".")
+    if "rc" in version_pkg[2]:
+        patch = version_pkg[2].split("rc")[0]
+        rc = version_pkg[2][len(patch) + 2 :]
+        latest_version = VersionInfo(
+            major=version_pkg[0],
+            minor=version_pkg[1],
+            patch=patch,
+            prerelease="rc." + rc,
+        )
+    else:
+        latest_version = VersionInfo(
+            major=version_pkg[0], minor=version_pkg[1], patch=version_pkg[2]
+        )
+
+    if to_check > latest_version:
+        return str(to_check)
+    else:
+        raise IOError("Version is smaller than or equal as already published version")
+
+
 if __name__ == "__main__":
-    parser = argparse.ArgumentParser(description="Obtain the link to a file at pypi.org")
+    parser = argparse.ArgumentParser(description="Obtain information about a module on pypi.org")
+    parser.add_argument(
+        "--wheel_link",
+        action="store_true",
+        help="Pass to obtain a wheel link.",
+        required=False,
+    )
+    parser.add_argument(
+        "--check_version",
+        type=str,
+        help="Check if given version is a valid SemVer version and also a valid next version for the given package.",
+        required=False,
+        default=None,
+    )
     parser.add_argument(
         "--package",
         type=str,
@@ -62,6 +111,13 @@ if __name__ == "__main__":
         required=False,
     )
     args = parser.parse_args()
+    # args = parser.parse_args("--check_version 1.7.1-rc.1".split())
 
-    file_link = get_pypi_url(package=args.package, version=args.version, pattern=args.pattern)
-    print(file_link)
+    if args.wheel_link:
+        file_link = get_pypi_url(package=args.package, version=args.version, pattern=args.pattern)
+        print(file_link)
+    elif args.check_version is not None:
+        version = check_version(args.check_version, package=args.package)
+        print(version)
+    else:
+        raise IOError()
