@@ -4,6 +4,16 @@ All changes of DMT starting from version 1.3.0 will be documented in this file. 
 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased]- 
+
+## Added
+
+- Pushing release-candidates to Pypi with ensured transparent versioning using git tags.
+
+### Removed
+
+- Removed gitlab.com repository from pipeline.
+
 ## [1.7.0] - 2022.08.17
 
 ### Added
